--- a/app/views/home/index.ejs
+++ b/app/views/home/index.ejs
@@ -11,21 +11,21 @@
             </div>
         <%}%>
 
-        <h1>Applytics - Analytics para seu app de forma simples.</h1>
-
+        <h1>Analytics para seu app de forma simples.</h1>
+        <hr>
         <section class="what-index">
             <h2>O que é?</h2>
-            <p></p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur egestas quis mauris vel sodales. Curabitur ullamcorper ultricies urna eget lacinia. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque bibendum, neque sit amet interdum dapibus, felis nisl condimentum dui, quis suscipit ex sem a est. Integer viverra rhoncus nibh, et accumsan nunc rutrum eget. Nulla libero massa, tempus nec velit vel, ultricies luctus ipsum. Vestibulum at turpis ex. Cras a urna in justo semper sodales. Aliquam tristique eros ac eros imperdiet dapibus. Vestibulum hendrerit hendrerit ligula at consequat.</p>
         </section>
 
         <section class="who-index">
             <h2>Pra quem?</h2>
-            <p></p>
+            <p>Aliquam suscipit, enim nec ultrices consequat, enim urna efficitur neque, eu porta sapien dui eu mauris. Sed euismod, eros in pulvinar cursus, ligula sapien pellentesque justo, vel tempor nisl odio fringilla nunc. Sed fermentum, sapien et ornare porttitor, massa est ornare odio, quis rhoncus enim turpis at quam. Suspendisse feugiat interdum dui id tempus. Donec iaculis sagittis sodales. Curabitur eget urna sodales, cursus orci ac, laoreet est. Donec sed nulla hendrerit magna venenatis bibendum. Praesent blandit nibh lectus, a elementum enim malesuada vel. Nam et ante est. Nulla condimentum metus a tortor efficitur, sed elementum diam auctor. Phasellus aliquam gravida mauris, vitae aliquam ipsum ornare quis. Nam molestie, nunc sed tempor congue, ipsum massa dictum purus, eu ultricies nisi augue ut lacus. Aliquam arcu dolor, mollis non volutpat volutpat, placerat ut tortor. Phasellus blandit quam lectus, quis efficitur tortor ultricies molestie. Proin auctor nibh nisl, finibus ultrices risus tincidunt nec.</p>
         </section>
 
         <section class="how-index">
             <h2>Como utilizar?</h2>
-            <p></p>
+            <p>Sed aliquet, neque vel ultricies ullamcorper, risus purus pellentesque mi, et porttitor est mauris eu leo. In eget dictum lorem, sed egestas magna. Aenean at diam ac ipsum laoreet mattis in non dui. Nam molestie purus ut nisl iaculis lobortis vitae at sapien. In sed aliquet nibh. Maecenas euismod nulla quam, vel ultrices felis tempus dignissim. Ut pulvinar volutpat lobortis. Vivamus tincidunt, risus vel rhoncus molestie, tellus ex blandit nisi, in euismod purus turpis eget est. Fusce luctus purus ipsum, vel viverra nisl vehicula quis. Maecenas at neque eu justo blandit egestas. Vestibulum eget semper nisi. Nunc vitae orci odio. Quisque feugiat dolor sodales iaculis volutpat. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam ullamcorper, urna id aliquet fermentum, nunc arcu sodales leo, eget sagittis tellus massa ac tortor.</p>
         </section>
     </main>
 
