--- a/app/public/css/test.css
+++ b/app/public/css/test.css
@@ -1,3 +1,12 @@
 .index h1 {
     text-align: center;
 }
+
+body {
+    background-color: #f1f1f1 !important;
+}
+
+.index {
+    border-radius: 15px;
+    background-color: white;
+}
