--- a/app/views/layout/_header.ejs
+++ b/app/views/layout/_header.ejs
@@ -38,6 +38,7 @@
                                             <a class="dropdown-item" href="/dashboard">Dashboard</a>
                                             <a class="dropdown-item" href="/usuarios/<%= usuarioLogado._id %>">Alterar perfil</a>
                                             <a class="dropdown-item" href="/dashboard/novo">Cadastrar novo app</a>
+                                            <a class="dropdown-item" href="/dashboard/editar">Editar app selecionado</a>
                                             <a class="dropdown-item" href="/usuarios/logout">Log-out</a>
                                         </div>
                                     </div>
