--- a/app/views/dashboard/editarApp.ejs
+++ b/app/views/dashboard/editarApp.ejs
@@ -1,7 +1,7 @@
 <%- include('../layout/_header'); %>
 
     <main role="main" class="container">
-        <div class="card bg-light mb-3 mx-auto shadow" style="max-width: 30rem; margin-top: 2rem;">
+        <div class="card bg-light mb-3 mx-auto shadow form-box">
             <div class="card-header text-center">
                 <h1>Editar app selecionado</h1>
             </div>
