--- a/app/views/dashboard/index.ejs
+++ b/app/views/dashboard/index.ejs
@@ -23,33 +23,35 @@
                     <div class="progress" style="height: 2px;">
                         <div class="progress-bar" style="width: <%= (dados.num_usuarios.totais.length / dados.num_usuarios.totais.length) * 100 %>%" role="progressbar" aria-valuenow="<%= dados.num_usuarios.totais.length %>" aria-valuemin="0" aria-valuemax="<%= dados.num_usuarios.totais.length %>"></div>
                     </div>
+            <div class="row justify-content-around">
+                <div class="shadow bg-white border rounded col-md-5 stats-box">
                     <p>Usuários ativos nas ultimas 24h <strong><%= dados.num_usuarios.dia.length.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></strong></p>
-                    <div class="progress" style="height: 2px;">
+                    <div class="progress">
                         <div class="progress-bar" style="width: <%= (dados.num_usuarios.dia.length / dados.num_usuarios.totais.length) * 100 %>%" role="progressbar" aria-valuenow="<%= dados.num_usuarios.dia.length %>" aria-valuemin="0" aria-valuemax="<%= dados.num_usuarios.totais.length %>"></div>
                     </div>
                     <p>Usuários ativos na última semana <strong><%= dados.num_usuarios.semana.length.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></strong></p>
-                    <div class="progress" style="height: 2px;">
+                    <div class="progress">
                         <div class="progress-bar" style="width: <%= (dados.num_usuarios.semana.length / dados.num_usuarios.totais.length) * 100 %>%" role="progressbar" aria-valuenow="<%= dados.num_usuarios.semana.length %>" aria-valuemin="0" aria-valuemax="<%= dados.num_usuarios.totais.length %>"></div>
                     </div>
                     <p>Usuários ativos no último mês <strong><%= dados.num_usuarios.mes.length.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></strong></p>
-                    <div class="progress" style="height: 2px;">
+                    <div class="progress">
                         <div class="progress-bar" style="width: <%= (dados.num_usuarios.mes.length / dados.num_usuarios.totais.length) * 100 %>%" role="progressbar" aria-valuenow="<%= dados.num_usuarios.mes.length %>" aria-valuemin="0" aria-valuemax="<%= dados.num_usuarios.totais.length %>"></div>
                     </div>
                     <p>Usuários ativos no último ano <strong><%= dados.num_usuarios.ano.length.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></strong></p>
-                    <div class="progress" style="height: 2px;">
+                    <div class="progress">
                         <div class="progress-bar" style="width: <%= (dados.num_usuarios.ano.length / dados.num_usuarios.totais.length) * 100 %>%" role="progressbar" aria-valuenow="<%= dados.num_usuarios.ano.length %>" aria-valuemin="0" aria-valuemax="<%= dados.num_usuarios.totais.length %>"></div>
                     </div>
                     <p>Total de usuários masculinos <strong><%= dados.num_usuarios.masculinos.length.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></strong></p>
-                    <div class="progress" style="height: 2px;">
+                    <div class="progress">
                         <div class="progress-bar" style="width: <%= (dados.num_usuarios.masculinos.length / dados.num_usuarios.totais.length) * 100 %>%" role="progressbar" aria-valuenow="<%= dados.num_usuarios.masculinos.length %>" aria-valuemin="0" aria-valuemax="<%= dados.num_usuarios.totais.length %>"></div>
                     </div>
                     <p>Total de usuários femininos <strong><%= (dados.num_usuarios.totais.length - dados.num_usuarios.masculinos.length).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></strong></p>
-                    <div class="progress" style="height: 2px;">
+                    <div class="progress">
                         <div class="progress-bar" style="width: <%= ((dados.num_usuarios.totais.length - dados.num_usuarios.masculinos.length) / dados.num_usuarios.totais.length) * 100 %>%" role="progressbar" aria-valuenow="<%= (dados.num_usuarios.totais.length - dados.num_usuarios.masculinos.length) %>" aria-valuemin="0" aria-valuemax="<%= dados.num_usuarios.totais.length %>"></div>
                     </div>
                 </div>
 
-                <div class="shadow bg-white border rounded col-md-5" style="padding: 10px; margin: 15px 0;">
+                <div class="shadow bg-white border rounded col-md-5 stats-box">
                     <p>Tempo total de uso do app em segundos <strong><%= dados.tempo_total_sessoes[0].sum.toFixed(2).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>s</strong></p>
                     <p>Tempo médio de uso do app por usuário <strong><%= dados.media_tempo_total.toFixed(2).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>s</strong></p>
                     <p>Variância do tempo total de uso do app <strong><%= dados.variancia_tempo_total.toFixed(2).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>s</strong></p>
@@ -62,7 +64,7 @@
             </div>
 
             <div class="row justify-content-around">
-                <div class="col-md-11 shadow bg-white border rounded" style="padding: 10px; margin: 15px 0;">
+                <div class="col-md-11 shadow bg-white border rounded stats-box">
                     <div id="chartUsuarios" style="width:100%; height:400px;"></div>
                     <div id="pieResolucoes" style="width:100%; height:400px;"></div>
                     <div id="barTempoSessao" style="width:100%; height:400px;"></div>
