--- a/app/views/erros/404.ejs
+++ b/app/views/erros/404.ejs
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>404</title>
-</head>
-<body>
-    <p>Página não encontrada :(</p>
-</body>
-</html>
+<%- include('../layout/_header'); %>
+
+    <div class="text-center">
+        <h1>Página não encontrada :(</h1>
+        <p>Verifique se o endereço digitado está correto.</p>
+    </div>
+
+<%- include('../layout/_footer'); %>
