--- a/app/views/home/index.ejs
+++ b/app/views/home/index.ejs
@@ -18,7 +18,7 @@
             <p>Applytics é um sistema de analytics voltados ao mercado de aplicativos mobile com o intuito de ser uma alternativa simples e rápida para aprender a consultar e analisar dados de navegações dos usuários.</p>
         </section>
 
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div id="carouselExampleIndicators" class="carousel slide features-slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                   <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                   <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -26,22 +26,22 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="d-block w-100" src="/img/estatisticas.PNG" alt="First slide" style="height: 400px">
-                    <div class="carousel-caption d-none d-md-block bg-dark" style="opacity: 0.6;">
+                    <img class="d-block w-100" src="/img/estatisticas.PNG" alt="Slide de estatísticas">
+                    <div class="carousel-caption d-none d-md-block bg-dark">
                         <h5>Estatísticas</h5>
                         <p>Para facilmente visualizar a eficácia do seu app</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="/img/graficos.PNG" alt="Second slide" style="height: 400px">
-                    <div class="carousel-caption d-none d-md-block bg-dark" style="opacity: 0.6;">
+                    <img class="d-block w-100" src="/img/graficos.PNG" alt="Slide de gráficos">
+                    <div class="carousel-caption d-none d-md-block bg-dark">
                         <h5>Gráficos</h5>
                         <p>Para poder comparar dados de forma simples</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="/img/mapas.PNG" alt="Third slide" style="height: 400px">
-                    <div class="carousel-caption d-none d-md-block bg-dark" style="opacity: 0.6;">
+                    <img class="d-block w-100" src="/img/mapas.PNG" alt="Slide de mapas">
+                    <div class="carousel-caption d-none d-md-block bg-dark">
                         <h5>Mapas</h5>
                         <p>Para saber de onde vem seu público</p>
                     </div>
