--- a/app/views/erros/500.ejs
+++ b/app/views/erros/500.ejs
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>500</title>
-</head>
-<body>
-    <p>Erro interno</p>
-</body>
-</html>
+<%- include('../layout/_header'); %>
+
+    <div class="text-center">
+        <h1>Erro interno :(</h1>
+        <p>Houve um problema do nosso lado, estamos trabalhando para corrigir.</p>
+    </div>
+
+<%- include('../layout/_footer'); %>
