--- a/app/views/layout/_header.ejs
+++ b/app/views/layout/_header.ejs
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="theme-color" content="#343A40">
         <link rel="stylesheet" href="/css/test.css">
-        <link rel="stylesheet" href="/css/tags-input.css">
         <script src="/js/main.js"></script>
         <title>Applytics</title>
     </head>
 
     <body>
-        <header style="margin-bottom: 20px;">
+        <header>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-between">
                 <div>
                     <a class="navbar-brand" href="/">Applytics</a>
