--- a/app/views/usuarios/perfil.ejs
+++ b/app/views/usuarios/perfil.ejs
@@ -1,6 +1,6 @@
 <%- include('../layout/_header'); %>
     <main role="main" class="container">
-        <div class="card bg-light mb-3 mx-auto shadow" style="max-width: 30rem; margin-top: 2rem;">
+        <div class="card bg-light mb-3 mx-auto shadow form-box">
         <div class="card-header text-center">
             <h1>Editar perfil</h1>
         </div>
