--- a/app/views/dashboard/index.ejs
+++ b/app/views/dashboard/index.ejs
@@ -33,7 +33,7 @@
                 </div>
                 <div class="shadow bg-white border border-primar rounded col-md-2 stats-box text-center">
                     <p>Total de travamentos</p>
-                    <p><strong>127</strong></p>
+                    <p><strong><%= dados.num_crashes.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></strong></p>
                 </div>
             </div>
             
@@ -85,6 +85,7 @@
                     <div id="colIdades" style="width:100%; height:400px;"></div>
                     <div id="mapaDist" style="width:100%; height:400px;"></div>
                     <div id="pieViewsAcessos" style="width:100%; height:400px;"></div>
+                    <div id="chartCrashes" style="width:100%; height:400px;"></div>
                 </div>
             </div>
 
@@ -332,6 +333,57 @@
                         name: 'Usuários',
                         colorByPoint: true,
                         data: <%- JSON.stringify(dados.views) %>
+                    }],
+                    credits: {
+                        enabled: false
+                    }
+                });
+
+                var myCrashLineChart = Highcharts.chart('chartCrashes', {
+                    chart: {
+                        type: 'column'
+                    },
+                    title: {
+                        text: 'Quantidade de travamentos por mês'
+                    },
+                    yAxis: {
+                        title: {
+                            text: 'Número de travementos'
+                        },
+                        stackLabels: {
+                            enabled: true,
+                            style: {
+                                fontWeight: 'bold',
+                                color: (Highcharts.theme && Highcharts.theme.textColor) || 'gray'
+                            }
+                        }
+                    },
+                    xAxis: {
+                        categories: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro']
+                    },
+                    legend: {
+                        align: 'center',
+                        verticalAlign: 'top'
+                    },
+                    tooltip: {
+                        headerFormat: '<b>{point.x}</b><br/>',
+                        pointFormat: '{series.name}: {point.y}<br/>Total: {point.stackTotal}'
+                    },
+                    plotOptions: {
+                        column: {
+                            stacking: 'normal',
+                            dataLabels: {
+                                enabled: false,
+                                color: (Highcharts.theme && Highcharts.theme.dataLabelsColor) || 'white'
+                            }
+                        }
+                    },
+                    series: [{
+                        name: 'Travamentos tratados',
+                        data: <%- JSON.stringify(dados.crashes_mes_tratadas) %>
+                    }, {
+                        name: 'Travamentos fatais',
+                        data: <%- JSON.stringify(dados.crashes_mes_nao_tratadas) %>
                     }],
                     credits: {
                         enabled: false
